TODO: maybe implement a default message channel, very much like Erlang
      (which is cool in a lot of important aspects (failures!),
      but very lacking in others (higher level ipc)).

	- do no longer rely on the presence of EV::DNS if EV is used
          (because it is gone), but instead take avdantage of EV::ADNS
          if available.

4.22 Fri Nov 30 16:04:04 CET 2007
	- really use optimised versions for Event and EV in Coro::Util
          and Coro::Handle.

4.21 Sun Nov 25 10:48:59 CET 2007
	- fix a spurious memory read.
        - Coro::EV no longer keeps the eventloop "alive".

4.2  Fri Nov  9 20:47:05 CET 2007
	- enable/disable tracing from a new coroutine, not a pooled one.
        - fix a memleak in Coro::Event.
        - removed killall call from fork_eval.
        - made sure store_fd is already loaded so that fork_eval
          does not have to parse autoload in each subprocess.
        - only use assembly method if -O switch is in $Config{optimize}.
        - add (optional) Coro::EV module, so far the best event loop module
          directly supported by Coro.
        - if the event model is EV, use EV::DNS to resolve
          stuff in Coro::Util.
        - don't get confused by multiple event notifications in Coro::Handle.
        - initial support for EV (libevent interface).
        - require Event and EV using configure_requires, to force their existance.

4.13 Wed Oct 24 07:26:45 CEST 2007
	- add Coro::Storable::blocking_thaw.
        - use a vastly more complicated technique to localise
          $SIG{__WARN/DIE__} that also works on perls <= 5.8.8.
        - use a coroutine for the idle callback Coro::Event,
          instead of running Event in the current coroutine context.
          This also catches recursive invocations.
        - actually report fork errors in gethostbyname and inet_aton.

4.11 Thu Oct 11 02:40:24 CEST 2007
	- port to threaded perls.

4.1  Thu Oct 11 02:38:16 CEST 2007