@@ -8,6 +8,7 @@ TODO: maybe implement a default message channel, very much like Erlang
 	- do no longer rely on the presence of EV::DNS if EV is used
           (because it is gone), but instead take avdantage of EV::ADNS
           if available.
+        - add ($) prototypes to all functions in Coro::Storable.
 
 4.22 Fri Nov 30 16:04:04 CET 2007
 	- really use optimised versions for Event and EV in Coro::Util
